<resources>
    <string name="app_name">众要机械</string>
    <string name="shouye">首页</string>
    <string name="fabu">发布</string>
    <string name="gouwuche">购物车</string>
    <string name="wode">我的</string>
    <string name="re">热</string>
    <string name="ge">个</string>
    <string name="qi">企</string>
    <string name="qi_dong">起</string>
    <string name="quanguo">全国</string>
    <string name="fatie">发帖</string>
    <string name="tiezi">帖子</string>
    <string name="xiangqing">详情</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_pepoule">个人注册</string>
    <string name="register_gonsi">公司注册</string>
    <string name="zhucejishiwei">注册即视为同意</string>
    <string name="yonghuxieyi">《用户协议》</string>
    <string name="yonghuxieyi_title">用户协议</string>
    <string name="querendingdan">确认订单</string>
    <string name="qingshezhiyonghuming">请设置用户名</string>
    <string name="shezhimima">请设置6-20位密码</string>
    <string name="shezhimima_too">请再输入一次密码</string>
    <string name="qingshuruxingming">请输入姓名</string>
    <string name="qingshurufaren">请输入法人</string>
    <string name="qingshurusousuodeguanjianzi">请输入搜索的关键字</string>
    <string name="qingshurugongsimingcheng">请输入公司名称</string>
    <string name="qingshurushoujihao">请输入手机号</string>
    <string name="fasongyanzhengma">发送验证码</string>
    <string name="duanxinyanzhengma">短信验证码</string>
    <string name="yanzhnegmabuzhengque">验证码不正确</string>
    <string name="faxiaoxi">发消息</string>
    <string name="xiaoxi">消息</string>
    <string name="zixun">资讯</string>
    <string name="heimingdan">黑名单</string>
    <string name="zhifubao">支付宝</string>
    <string name="weixin">微信</string>
    <string name="weidenglu">未登录</string>
    <string name="zhanghuanquan">账户安全</string>
    <string name="xiugaishoujihaoma">修改手机号码</string>
    <string name="xiugaimima">修改密码</string>
    <string name="xiugainickname">修改昵称</string>
    <string name="xiugaixingbie">修改性别</string>
    <string name="xiugaidenglumima">修改登录密码</string>
    <string name="xiugaichenggong">修改成功</string>
    <string name="xiugaishibai">修改失败</string>
    <string name="xiugai">修改</string>
    <string name="shoujihao">手机号</string>
    <string name="genghuanshoujihao">更换手机号</string>
    <string name="shurushoujihao">输入手机号</string>
    <string name="china_dalu">中国大陆</string>
    <string name="qingshurunindeshoujihao">请输入您的手机号</string>
    <string name="next">下一步</string>
    <string name="ok">确认</string>
    <string name="baocun">保存</string>
    <string name="womenyifasong">我们已发送</string>
    <string name="yanzhengma">验证码</string>
    <string name="duanxindaoshouji">短信到您的手机:</string>
    <string name="qingshuruyanzhengma">请输入验证码</string>
    <string name="wodedingdan">我的订单</string>
    <string name="dingdanxiangqing">订单详情</string>
    <string name="wodepingjia">我的评价</string>
    <string name="wodefatie">我的发帖</string>
    <string name="fabiaopingjia">发表评价</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="qingjianchawangluo">请检查网络</string>
    <string name="wodezuling">我的租赁</string>
    <string name="tijiao">提交</string>
    <string name="zulingqishiriqi">租赁起始日期</string>
    <string name="yajin">押金</string>
    <string name="zujin">租金</string>
    <string name="zuqi">租期</string>
    <string name="heji">合计:</string>
    <string name="chakanhetong">查看合同</string>
    <string name="lianximaijia">联系卖家</string>
    <string name="quxiaodingdan">取消订单</string>
    <string name="pay">付&#160;&#160;款</string>
    <string name="tuikuan">退&#160;&#160;款</string>
    <string name="chakanwuliu">查看物流</string>
    <string name="querenshouhuo">确认收货</string>
    <string name="pingjia">#160;评&#160;&#160;价&#160;</string>
    <string name="pingjia2"> 评  价 </string>
    <string name="all">全部</string>
    <string name="zhengzaishenhe">正在审核</string>
    <string name="daifukuan">待付款</string>
    <string name="yizulin">已租赁</string>
    <string name="zulin">租赁</string>
    <string name="daifahuo">待发货</string>
    <string name="daishouhuo">待收货</string>
    <string name="daipingjia">待评价</string>
    <string name="liulanjilu">浏览记录</string>
    <string name="collection">我的收藏</string>
    <string name="allpingjia">全部评价</string>
    <string name="lookpingjia">查看我的评价</string>
    <string name="pingjia_success">评价成功</string>
    <string name="tuijianchanpin">推荐产品</string>
    <string name="suoyouchanpin">所有产品</string>
    <string name="pingjia_success_content">感谢您用心写评价,这会帮助到更多想购买此产品的人们!</string>
    <string name="change_nickname_message">4-20个字符。可由中英文、数字组成</string>
    <string name="bianji">编辑</string>
    <string name="bianjishouhuodizhi">编辑收货地址</string>
    <string name="delete">删除</string>
    <string name="chongzhi">重置</string>
    <string name="shouhuodizhi">收货地址</string>
    <string name="shouhuoren">收货人</string>
    <string name="lianxiren">联系人</string>
    <string name="lianxidianhua">联系电话</string>
    <string name="suozaidiqu">所在地区</string>
    <string name="zaixianzhifu">在线支付</string>
    <string name="duigongfukuan">对公付款</string>
    <string name="qingxuanze">请选择</string>
    <string name="jiedaoxiangzhen">街道 (乡镇)</string>
    <string name="map">地图</string>
    <string name="wait_reviewed">等待审核</string>
    <string name="shenheyitongguo">审核已通过</string>
    <string name="daishenhe">合同、资料提交给后台管理员</string>
    <string name="bussiness">商家中心</string>
    <string name="qingxuanzexingbie">请选择性别</string>
    <string name="xinji">新机</string>
    <string name="ershouji">二手</string>
    <string name="peijian">配件</string>
    <string name="zonghe">综合</string>
    <string name="pinpai">品牌</string>
    <string name="diqu">地区</string>
    <string name="shaixuan">筛选</string>
    <string name="message">消息</string>
    <string name="baomi">保密</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="xinxibuwanzheng">信息不完整</string>
    <string name="mimabuyizhi">两次输入的密码不一致</string>
    <string name="ninhaimeiyoushouhuodizhi">您还没有收货地址</string>
    <string name="zuokuobao">[</string>
    <string name="youkuohao">]</string>
    <string name="yonghuming_zhengze">abcdefghijklmnopqrstuvwxyvz0123456789</string>
    <string name="yanzhengmafasongchenggong">验证码发送成功</string>
    <string name="yanzhengmafasongshibai">验证码发送失败</string>
    <string name="yanzhengmafasongshibaiwangluo">验证码发送失败,请检查网络是否通畅</string>
    <string name="qingshuruzhengquedeyanzhengma">请输入正确的手机号</string>
    <string name="zhuceshibai">注册失败</string>
    <string name="zhucechenggong">注册成功</string>
    <string name="fatiechenggong">发帖成功</string>
    <string name="fatieshibai">发帖失败,请重试</string>
    <string name="fatieshibaijianchawangluo">发帖失败,请检查网络</string>
    <string name="huitiechenggong">回帖成功</string>
    <string name="huitieshibai">回帖失败,请重试</string>
    <string name="huitieshibaiqingjiancha">回帖失败,请检查网络</string>
    <string name="huifuneirong">回复内容</string>
    <string name="wucifenlei">该栏目下无产品</string>
    <string name="wucishangjia">无此商家</string>
    <string name="shangpinxiangqing">商品详情</string>
    <string name="tuikuanshouhou">退款售后</string>
    <string name="wuliuxiangqing">物流详情</string>
    <string name="qingxuanzesheng">请选择省</string>
    <string name="qingxuanzeshi">请选择市</string>
    <string name="wushangpin">无商品</string>
    <string name="dingdantijiaoshibai">订单提交失败</string>
    <string name="dingdantijiaoshibai_wangluo">订单提交失败,请检查网络</string>
    <string name="dingdanyitijiaochenggong">订单已提交成功,请到个人中心查看</string>
    <string name="tijiaoshibai_wangluo">提交失败,请检查网络</string>
    <string name="baocunchenggong">保存成功</string>
    <string name="zanwulianxifangshi">暂无联系方式</string>
    <string name="baocunshibaiqingchongshi">保存失败,请重试</string>
    <string name="wangluocuowu">网络错误</string>
    <string name="woyaofahuo">我要发货</string>
    <string name="woyaochengyun">我要承运</string>
    <string name="chengyunrenrenzheng">承运人认证</string>
    <string name="chengyunfangrenzheng">承运认证</string>
    <string name="huoyuanguangchang">货源广场</string>
    <string name="gerenzhongxin">个人中心</string>
    <string name="zuixinxinxi">最新信息</string>
    <string name="yunshu">运输</string>
    <string name="baojia">报价</string>
    <string name="congyezigexinxizhenghao">从业资格证信息证号</string>
    <string name="xian20zifu">限20字符</string>
    <string name="shuru11weishoujihao">输入11位手机号</string>
    <string name="jinjilianxihaoma">紧急联系号码</string>
    <string name="jiashizhengzhaopian">驾驶证照片</string>
    <string name="chepaihao">车牌号</string>
    <string name="qingshuruchepaihao">请输入车牌号</string>
    <string name="daoluyunshuzhengzihao">道路运输证字号</string>
    <string name="bixuyudaoluyunshuzhengyizhi">必须与道路运输证一致</string>
    <string name="daoluyunshuzhengzhaopian">道路运输证照片</string>
    <string name="cheqianqingxizhaopian">车前清晰照片</string>
    <string name="chetouxingshizhengqingxizhaopian">车头行驶证清晰照片</string>
    <string name="guachexingshizhengqingxizhaopian">挂车行驶证清晰照片</string>
    <string name="chexing">车型</string>
    <string name="chechang">车长</string>
    <string name="chekuan">车宽</string>
    <string name="chegao">车高</string>
    <string name="shuru20yineixiaoshudianzuiduoliangwei">输入20以内,小数点最多两位</string>
    <string name="zuidachengzaidongli">最大承载动力</string>
    <string name="shuru100yineixiaoshudianzuiduoliangwei">输入100以内,小数点最多两位</string>
    <string name="bixuan">必选</string>
    <string name="bitian">必填</string>
    <string name="biaoti">标题</string>
    <string name="neirongbuchaoguo300zi">内容不超过300字</string>
    <string name="huozhurenzheng">货主认证</string>
    <string name="tijiaoziliao">提交资料</string>
    <string name="pingtaishenhe">平台审核</string>
    <string name="xingming">姓名</string>
    <string name="shenfenzhenghaoma">身份证号码</string>
    <string name="shenfenzhengzhaopian">身份证照片</string>
    <string name="qiyemingcheng">企业名称</string>
    <string name="yingyezhizhao">营业执照</string>
    <string name="daoluyunshuxukezheng">道路运输许可证</string>
    <string name="daoluyunshuxukezhenghao">道路运输许可证号</string>
    <string name="cheliangguanli">车辆管理</string>
    <string name="tianjiacheliang">添加车辆</string>
    <string name="pipeisiji">匹配司机</string>
    <string name="sijilianxidianhua">司机联系电话</string>
    <string name="huowumingcheng">货物名称</string>
    <string name="fahuoshijian">发货时间</string>
    <string name="guige">规格</string>
    <string name="huowuzhongliang">货物重量</string>
    <string name="huowudizhi">货物地址</string>
    <string name="fahuorenxinxi">发货人信息</string>
    <string name="chexingyaoqiu">车型要求</string>
    <string name="chechangyaoqiu">车长要求</string>
    <string name="shifoujiaji">是否加急</string>
    <string name="shi">是</string>
    <string name="fou">否</string>
    <string name="yiwancheng">已完成</string>
    <string name="dizhi">地址</string>
    <string name="qingshurujiuimima">请输入旧密码</string>
    <string name="qingshuru6dao12weixinmima">请输入6-12位新密码</string>
    <string name="qingzaishuruyicixinmima">请再输入一次新密码</string>
    <string name="jiantizhongwen">简体中文</string>
    <string name="english">English</string>
    <string name="xuanzeyuyan">选择语言</string>
    <string name="zhengzaijinxingzhong">正在报价</string>
    <string name="chakanbaojia">查看报价</string>
    <string name="dianhua">电话</string>
    <string name="shurudianhua">输入电话</string>
    <string name="qingxuanzechexing">请选择车型</string>
    <string name="qingxuanzechechang">请选择车长</string>
    <string name="jiage">价格</string>
    <string name="shurujiage">输入价格</string>
    <string name="dengdaixuanze">等待选择</string>
    <string name="querenzhuanghuo">确认装货</string>
    <string name="querenxiehuo">确认卸货</string>
    <string name="shenqingjiesuan">申请结算</string>
    <string name="huozhuweixuanze">货主未选择</string>
    <string name="jiesuanshenhezhong">结算审核中</string>
    <string name="fukuan">立即付款</string>
    <string name="yifukuan">已付款</string>
    <string name="baojiashu">报价数</string>
    <string name="shenqingshibai">申请失败</string>
    <string name="weifukuan">货主未付款</string>
</resources>