<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_top_bar_center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xingming" />

        <EditText
            android:id="@+id/baojia_activity_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/yinying_bg"
            android:hint="@string/qingshuruxingming"
            android:maxLines="1"
            android:padding="10dp"
            android:textColorHint="@color/fatie_hint_color"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dianhua" />

        <EditText
            android:id="@+id/baojia_activity_edittext_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:inputType="number"
            android:background="@drawable/yinying_bg"
            android:hint="@string/shurudianhua"
            android:maxLines="1"
            android:padding="10dp"
            android:textColorHint="@color/fatie_hint_color"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chexing" />

        <TextView
            android:id="@+id/baojia_activity_chexing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/yinying_bg"
            android:gravity="center"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/qingxuanzechexing"
            android:textColorHint="@color/fatie_hint_color"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chechang" />

        <TextView
            android:id="@+id/baojia_activity_chechang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/yinying_bg"
            android:gravity="center"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/qingxuanzechechang"
            android:textColorHint="@color/fatie_hint_color"
            android:textSize="13sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jiage" />

        <EditText
            android:id="@+id/baojia_activity_edittext_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/yinying_bg"
            android:hint="@string/shurujiage"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:padding="10dp"
            android:textColorHint="@color/fatie_hint_color"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/baojia_layout_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/xiaojiao_5dp_button_background"
        android:text="@string/tijiao"
        android:textColor="@color/cffffff"
        android:textSize="14sp" />
</LinearLayout>