<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_topbar_text_color"
    android:orientation="vertical">

    <include layout="@layout/base_top_bar_center" />

    <EditText
        android:id="@+id/yijianfankui_layout_address"
        style="@style/yinying_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="20dp"
        android:hint="@string/dizhi"
        android:maxLines="1"
        android:visibility="gone"
        android:padding="5dp"
        android:textColorHint="@color/fatie_hint_color"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="#ff0000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/bixuan"
            android:textColor="@color/fatie_bixuan_color"
            android:textSize="14sp" />

    </LinearLayout>


    <EditText
        android:id="@+id/yijianfankui_layout_call"
        style="@style/yinying_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="20dp"
        android:hint="@string/qingshurushoujihao"
        android:inputType="number"
        android:maxLines="1"
        android:padding="5dp"
        android:textColorHint="@color/fatie_hint_color"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="#ff0000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/bitian"
            android:textColor="@color/fatie_bixuan_color"
            android:textSize="14sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/yijianfankui_layout_title"
        style="@style/yinying_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="20dp"
        android:hint="@string/biaoti"
        android:maxLines="1"
        android:padding="5dp"
        android:textColorHint="@color/fatie_hint_color"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/yijianfankui_layout_content"
        style="@style/yinying_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="20dp"
        android:gravity="top|start"
        android:hint="@string/neirongbuchaoguo300zi"
        android:minLines="7"
        android:padding="5dp"
        android:textColorHint="@color/fatie_hint_color"
        android:textSize="13sp" />

    <Button
        android:id="@+id/yijianfankui_layout_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/xiaojiao_5dp_button_background"
        android:text="@string/tijiao"
        android:textColor="@color/cffffff"
        android:textSize="14sp" />
</LinearLayout>