<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/base_top_bar_center" />

    <EditText
        android:id="@+id/changed_password_jiumima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/fatie_edittext_background"
        android:hint="@string/qingshurujiuimima"
        android:maxLines="1"
        android:padding="5dp"
        android:textColorHint="@color/fatie_hint_color"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/changed_password_newmima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/fatie_edittext_background"
        android:hint="@string/qingshuru6dao12weixinmima"
        android:maxLines="1"
        android:padding="5dp"
        android:textColorHint="@color/fatie_hint_color"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/changed_password_newmima_too"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/fatie_edittext_background"
        android:hint="@string/qingzaishuruyicixinmima"
        android:maxLines="1"
        android:padding="5dp"
        android:textColorHint="@color/fatie_hint_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/changed_password_tijiao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_tuoyuan_blue_bg"
        android:text="@string/tijiao"
        android:textColor="@color/cffffff"
        android:textSize="16sp" />

</LinearLayout>